[package]
name = "bool"
version = "1.0.0"
authors = ["foresterre <garm@ilumeo.com>"]
edition = "2018"
description = "Straightforward re-useable enum based boolean"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
parameterized = "0.1.1"