[package]
name = "bool"
version = "0.2.0"
authors = ["foresterre <garm@ilumeo.com>"]
edition = "2018"
description = "Straightforward re-useable enum based boolean (which you likely won't need =))"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/foresterre/bool"
exclude = [".idea", ".vscode"]
categories = [ "no-std", ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "global_values", "has_alloc"]

# let this crate define True as Boolean::True and False as Boolean::False
global_values = []

# behaviour may differ when alloc is available e.g., behaviour of FromStr allows any casing (upper/lowercase) when this
# feature is enabled (the alloc crate should be available!)
has_alloc = []

[dependencies]

[dev-dependencies]
parameterized = "0.1.1"